--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/pet_project
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=ROOT
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.database=postgresql
