--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/pet_project
 spring.datasource.username=postgres
-spring.datasource.password=ROOT
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
