--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
 
-#app:
-#  image:
-#    bucket: C:/Users/Вадим/Desktop/final Project/pet_project/images/
+app:
+  image:
+#   bucket: C:/Users/Вадим/Desktop/final Project/pet_project/images/#app:
+    bucket: C:/myPetProject/back_end/pet_project/images
