--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,6 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
 
-
   security:
     oauth2:
       client:
@@ -18,6 +17,18 @@ spring:
             clientId: 782822282585-ptl1qnr0r27819kj0ibushkg85go0r3t.apps.googleusercontent.com
             clientSecret: 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
             redirectUri: http://localhost:8080/login/oauth2/code/google
+  mail:
+    password: gqqcjkijfmvgteux
+    username: vadimnaumnaum@gmail.com
+    host: smtp.gmail.com
+    port: 587
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+        debug: true
 
 
 #springdoc:
