deleted mapper and add methods in convertor for user

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,7 +28,7 @@ spring:
           auth: true
           starttls:
             enable: true
-        debug: true
+#        debug: true
 
 
 #springdoc:
