--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
         <!--            <scope>test</scope>-->
         <!--        </dependency>-->
         <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.16.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
