--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changelog/db.changelog-1.2.sql
   - include:
       file: db/changelog/db.changelog-2.0.sql
+  - include:
+      file: db/changelog/db.changelog-2.1.sql
