--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,5 +43,5 @@ app:
     url: http://localhost:8080/api/v1/auth/confirm/
     buy: http://localhost:8080/api/v1/orders/buy/
   image:
-    #  bucket: C:/Users/Вадим/Desktop/final Project/pet_project/images
-    bucket: C:/myPetProject/back_end/pet_project/images
+      bucket: C:/Users/Вадим/Desktop/final Project/pet_project/images
+#    bucket: C:/myPetProject/back_end/pet_project/images
