--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,5 @@ databaseChangeLog:
       file: db/changelog/db.changelog-2.2.sql
   - include:
       file: db/changelog/db.changelog-3.0.sql
+  - include:
+      file: db/changelog/db.changelog-3.1.sql
