--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -39,7 +39,7 @@ springdoc:
 
 app:
   sender:
-    url: http://localhost:8080/api/v1/auth/confirm/
+    url: http://localhost:5173/confirm/
     buy: http://localhost:8080/api/v1/orders/buy/
     forgotPassword: http://localhost:8080/api/v1/orders/forgotPassword/
   image:
